CME-34: Java 21 upgrade - Fix module java.base does not "opens java.lang" to unnamed module